// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RedisExecutor > executeFind > should apply offset/limit pagination 1`] = `
[
  TestEntity {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "2",
    "name": "b",
    "score": 20,
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "version": 1,
  },
]
`;

exports[`RedisExecutor > executeFind > should apply ordering 1`] = `
[
  "a",
  "b",
  "c",
]
`;

exports[`RedisExecutor > executeFind > should apply pagination with offset and limit 1`] = `
[
  TestEntity {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "2",
    "name": "b",
    "score": 20,
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "version": 1,
  },
]
`;

exports[`RedisExecutor > executeFind > should apply select to narrow returned fields 1`] = `
[
  TestEntity {
    "createdAt": undefined,
    "id": "abc-123",
    "name": "found",
    "score": undefined,
    "updatedAt": undefined,
    "version": undefined,
  },
]
`;

exports[`RedisExecutor > executeFind > should use PK-exact HGETALL for direct lookup 1`] = `
[
  TestEntity {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "abc-123",
    "name": "found",
    "score": 10,
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "version": 1,
  },
]
`;

exports[`RedisExecutor > executeFind > should use defaultOrder when no explicit order given 1`] = `
[
  "beta",
  "alpha",
]
`;

exports[`RedisExecutor > executeInsert > should insert entity into Redis HASH 1`] = `
TestEntity {
  "createdAt": undefined,
  "id": "abc-123",
  "name": "test",
  "score": 42,
  "updatedAt": undefined,
  "version": 1,
}
`;

exports[`RedisExecutor > executeUpdate > should perform unversioned update via GUARDED_HSET Lua script 1`] = `
SimpleEntity {
  "id": "simple-1",
  "label": "updated-label",
}
`;

exports[`RedisExecutor > executeUpdate > should perform versioned update via Lua script 1`] = `
TestEntity {
  "createdAt": undefined,
  "id": "abc-123",
  "name": "updated",
  "score": undefined,
  "updatedAt": undefined,
  "version": 2,
}
`;

exports[`RedisExecutor executeFind should apply offset/limit pagination 1`] = `
[
  TestEntity {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "2",
    "name": "b",
    "score": 20,
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "version": 1,
  },
]
`;

exports[`RedisExecutor executeFind should apply ordering 1`] = `
[
  "a",
  "b",
  "c",
]
`;

exports[`RedisExecutor executeFind should apply pagination with offset and limit 1`] = `
[
  TestEntity {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "2",
    "name": "b",
    "score": 20,
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "version": 1,
  },
]
`;

exports[`RedisExecutor executeFind should apply select to narrow returned fields 1`] = `
[
  TestEntity {
    "createdAt": undefined,
    "id": "abc-123",
    "name": "found",
    "score": undefined,
    "updatedAt": undefined,
    "version": undefined,
  },
]
`;

exports[`RedisExecutor executeFind should use PK-exact HGETALL for direct lookup 1`] = `
[
  TestEntity {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "abc-123",
    "name": "found",
    "score": 10,
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "version": 1,
  },
]
`;

exports[`RedisExecutor executeFind should use defaultOrder when no explicit order given 1`] = `
[
  "beta",
  "alpha",
]
`;

exports[`RedisExecutor executeInsert should insert entity into Redis HASH 1`] = `
TestEntity {
  "createdAt": undefined,
  "id": "abc-123",
  "name": "test",
  "score": 42,
  "updatedAt": undefined,
  "version": 1,
}
`;

exports[`RedisExecutor executeUpdate should perform unversioned update via GUARDED_HSET Lua script 1`] = `
SimpleEntity {
  "id": "simple-1",
  "label": "updated-label",
}
`;

exports[`RedisExecutor executeUpdate should perform versioned update via Lua script 1`] = `
TestEntity {
  "createdAt": undefined,
  "id": "abc-123",
  "name": "updated",
  "score": undefined,
  "updatedAt": undefined,
  "version": 2,
}
`;
